Project

General

Profile

Actions

Bug #16165

closed

rbd-mirror: crash while deleting hundreds of images

Added by Jason Dillaman almost 8 years ago. Updated almost 8 years ago.

Status:
Resolved
Priority:
Urgent
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

NON-PRIMARY

 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0x85) [0x7f9504d02bb5]
 2: (librbd::Journal<librbd::ImageCtx>::handle_op_event_safe(int, unsigned long, journal::Future const&, journal::Future const&)+0x320) [0x7f9504b967e0]
 3: (Context::complete(int)+0x9) [0x7f9504b031b9]
 4: (ThreadPool::worker(ThreadPool::WorkThread*)+0xa7e) [0x7f9504cf3e9e]
 5: (ThreadPool::WorkThread::entry()+0x10) [0x7f9504cf4d70]
 6: (()+0x7dc5) [0x7f94fa207dc5]
 7: (clone()+0x6d) [0x7f94f90edced]


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #16224: jewel: rbd-mirror: crash while deleting hundreds of imagesResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman almost 8 years ago

  • Priority changed from Normal to Urgent
Actions #2

Updated by Jason Dillaman almost 8 years ago

  • Description updated (diff)
Actions #3

Updated by Jason Dillaman almost 8 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Mykola Golub almost 8 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #5

Updated by Jason Dillaman almost 8 years ago

  • Copied to Backport #16224: jewel: rbd-mirror: crash while deleting hundreds of images added
Actions #6

Updated by Jason Dillaman almost 8 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF